Deployment from Statiq

--- a/release-notes/nextrelease.html
+++ b/release-notes/nextrelease.html
@@ -376,6 +376,10 @@
 <li>[Enhancement] Jobs is now included as part of Shiny codegen package</li>
 <li>[Fix] GenerateStaticClasses requires a namespace - removed optional arg on it</li>
 </ul>
+<h2 id="jobs">Jobs</h2>
+<ul>
+<li>[Fix][iOS] Fallback job manager needs to requestaccess on the ui thread <a href="https://github.com/shinyorg/shiny/pull/835">GH-835</a></li>
+</ul>
 <h2 id="bluetooth-le">Bluetooth LE</h2>
 <ul>
 <li>[Fix] Ensure write is performed for ManagedPeripheral</li>
